--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -205,26 +205,13 @@ nav{
     font-size: 17px;
 }
 
-.tooltip {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    color: #fff;
-    padding: 5px;
-    border-radius: 5px;
-    z-index: 1;
-    top: 0;
-    left: 100%;
-    margin-left: 10px;
-}
-
 .divisiones{
     color: #fff;
     font-size: 48px;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.noticias{
+.campeonato_mundial_mas {
     display: flex;
-    height: 15px;
+    justify-content: center;
 }
