--- a/pages/deportes/home_deportes.css
+++ b/pages/deportes/home_deportes.css
@@ -249,10 +249,18 @@
   .card4:hover .go-arrow {
     opacity: 1;
   }
+/*seccion para los estilos de los deportes para apostar*/
+  .deportes{
+    margin-top: 40px;
+  }
+  .apostar{
+    display: inline-block;
+    margin: 20px;
+  }
 /* centra el texto que cambia */
   .texto-cambiante{   
     display: flex;
     justify-content: center; /* Centrar horizontalmente */
     align-items: center; /* Centrar verticalmente */
     height: 50vh; /* Altura del viewport */
-}
+  }
