--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -221,3 +221,19 @@ nav{
     display: flex;
     justify-content: center;
 }
+
+/* Galeria */
+
+.contenedor_fotos {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.img-galeria {
+    width: 30%;
+    display: block;
+    margin-bottom: 15px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+    cursor: pointer;
+}
