--- a/pages/deportes/futbol/home_futbol.css
+++ b/pages/deportes/futbol/home_futbol.css
@@ -172,6 +172,13 @@ section {
   margin-top: 200px;
 }
 
+#premier,#bundesliga,#laLiga {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px;
+}
+
 .texto-noticias {
   font-size: 60px;
   color:#fff;
@@ -179,13 +186,6 @@ section {
   text-shadow: 2px 2px 3px black;
 }
 
-
-#premier {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px;
-}
 
 h2 {
   margin: 0;
@@ -242,15 +242,6 @@ td img {
   height: auto;
 }
 
-#bundesliga {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px;
-}
-
-
-
   /* carrousel noticias*/
 
   .carousel-container {
@@ -267,8 +258,8 @@ td img {
   }
   
   .carousel-slide img {
-    width: auto;
-    max-height: 250px;
+    width: 350px;
+    max-height: 350px;
     object-fit:cover;
     transition: transform 0.6s ease;
   }
@@ -277,7 +268,7 @@ td img {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    padding: 5px 5px;
+    padding: 15px 15px;
     border: none;
     background-color: #007BFF;
     color: #fff;
