--- a/pages/deportes/futbol/home_futbol.css
+++ b/pages/deportes/futbol/home_futbol.css
@@ -166,13 +166,14 @@ nav {
   .principal-2 img:hover{
   -webkit-transform:scale(1.3);transform:scale(1.3);}
 
+
   /* SECCIONES*/
 
 section {
   margin-top: 200px;
 }
 
-#premier,#bundesliga,#laLiga {
+#premier,#bundesliga,#laLiga,#serieA {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
