--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -240,7 +240,7 @@ nav{
 
 .imagen_light {
     position: fixed;
-    background: 0 0 0 rgba(0, 0, 0, .6);
+    background: 0 0 0 rgba(0, 0, 0, 0.896);
     width: 100%;
     height: 100%;
     top: 0;
