--- a/pages/deportes/futbol/home_futbol.css
+++ b/pages/deportes/futbol/home_futbol.css
@@ -7,7 +7,7 @@
  }
 
  body{
-  background-image: url('./images/home_fondo_messi.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),url('./images/home_fondo_messi.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
