--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -274,3 +274,67 @@ nav{
     width: 40px;
     cursor: pointer;
 }
+
+/* GOTOP */
+
+.gotop_container {
+    position: fixed;
+    bottom: 4rem;
+    right: 4rem;
+    width: 4.6rem;
+    height: 4.6rem;
+    z-index: -1;
+}
+
+.gotop_button {
+    width: 0rem;
+    height: 0rem;
+    background: #2070b2;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: .2s;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.gotop_button img {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: .2s;
+}
+
+.show2 {
+    z-index: 10;
+}
+
+.show2 .gotop_button {
+    animation: popup .3s ease-in-out;
+    width: 6.6rem;
+    height: 6.6rem;
+    z-index: 11;
+}
+
+.show2 img {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+@keyframes popup {
+    0%{
+        width: 0rem;
+        height: 0rem;
+    }
+    50%{
+        width: 8rem;
+        height: 8rem;
+    }
+    100%{
+        width: 6.6rem;
+        height: 6.6rem;
+    }
+}
