--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -338,3 +338,56 @@ nav{
         height: 6.6rem;
     }
 }
+
+/*footer*/
+footer {
+    background: #343434;
+    padding-top: 50px;
+    color: #fff;
+}
+
+.container_padre {
+    width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.footer_content {
+    width: 33.3%;
+}
+
+h3 {
+    font-size: 28px;
+    margin-bottom: 15px;
+    text-align: center;
+    text-shadow: 20px
+}
+
+.footer_content p {
+    width: 190px;
+    margin: auto;
+    padding: 7px;
+}
+
+.footer_content img {
+    width: 40px;
+    height: 40px;
+    padding-left: 15px;
+}
+
+.derechos {
+    background-color: #f18930;
+    bottom: 0;
+    text-align: center;
+    padding: 10px 0;
+    margin-top: 50px;
+}
+
+.derechos p {
+    color: #343434;
+    margin: 0px;
+    font-size: 18px;
+    padding: 7px;
+}
