--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -92,6 +92,16 @@ nav{
     font-family: 'Roboto Condensed', sans-serif;
     margin-top: 50px;
     margin-bottom: 50px;
+    text-shadow: 5px 5px 5px #f18930;
+}
+
+.subtitulo {
+    color: #fff;
+    font-family: 'fontJosefin Sans', sans-serif;
+    text-shadow: 10px 10px 10px #f18930;
+    font-size: 32px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .tabla_potencias{
@@ -362,7 +372,7 @@ h3 {
     font-size: 28px;
     margin-bottom: 15px;
     text-align: center;
-    text-shadow: 20px
+    text-shadow: 10px 10px 10px black;
 }
 
 .footer_content p {
