--- a/pages/deportes/Voley/home_voley.css
+++ b/pages/deportes/Voley/home_voley.css
@@ -64,7 +64,7 @@ nav{
     border-radius: 20px;
 }
 
-.boton_animado{
+.boton_animado {
     position: relative;
     display: inline-block;
     margin: 5px;
@@ -76,11 +76,11 @@ nav{
     border-radius: 100px;
     font-weight: 600;
     color: rgb(253, 253, 253);
-    box-shadow: 0 0 1rem rgba(52, 110, 233, 0.815);
+    box-shadow: 0 0 0 2px rgba(0, 81, 255, 0.521);
     cursor: pointer;
     overflow: hidden;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-}
+  }
 
 .boton_animado:hover{
     transform: scale(1.1);
