--- a/pages/deportes/Baseball/home_baseball.css
+++ b/pages/deportes/Baseball/home_baseball.css
@@ -33,12 +33,12 @@
   .puntos{
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 0px;
     justify-content: center;
     align-items: center;
   }
   .puntitos{
-    margin-top: 50px;
+    margin-top: 0px;
   }
   /*cartas de presentacion de los equipos */
 .cartaspresentacion{
@@ -84,7 +84,7 @@
   }
   .boston{
     background-image: url('/pages/deportes/Baseball/equipos/boston.svg');
-    background-size: 250px 350px;
+    background-size: 230px 330px;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
@@ -100,7 +100,7 @@
   }
   .chicago{
     background-image: url(/pages/deportes/Baseball/equipos/chicago.svg);
-    background-size: 250px 350px;
+    background-size: 230px 330px;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
@@ -108,7 +108,7 @@
   }
   .cleveland{
     background-image: url(/pages/deportes/Baseball/equipos/cleveland.svg);
-    background-size: 250px 350px;
+    background-size: 230px 330px;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
@@ -267,8 +267,8 @@
     height: 100%;
   }
   .pirates{
-    background-image: url(/pages/deportes/Baseball/equipos/pittsburgh.png);
-    background-size: 230px 330px;
+    background-image: url(/pages/deportes/Baseball/equipos/pittsburgh.svg);
+    background-size: 210px 320px;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
@@ -284,7 +284,7 @@
   }
   .giants{
     background-image: url(/pages/deportes/Baseball/equipos/sanfrancisco.svg);
-    background-size: 250px 350px;
+    background-size: 230px 330px;
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
@@ -326,36 +326,46 @@
   
   .content .btn {
     margin-top: 300px;
-    color: #e8e8e8;
+    color: #000; /* Cambiamos el color del texto a negro */
     text-decoration: none;
     padding: 10px;
     font-weight: 600;
     border: none;
     cursor: pointer;
-    background: linear-gradient(-45deg, hsl(204, 28%, 90%) 0%, hsl(0, 64%, 45%) 100% );
+    background: linear-gradient(45deg, #ff0000, #ffffff, #0000ff);
     border-radius: 5px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
+    transition: background 0.3s ease-in-out; /* Agregamos una transición para el cambio de fondo */
+}
+
+.content .btn:hover {
+    color: #000; /* Cambiamos el color del texto a negro en hover */
+    background: linear-gradient(45deg, #0000ff, #ffffff, #ff0000); /* Cambiamos los colores en el hover */
+}
+
   
-  .card::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(-45deg, hsl(204, 28%, 90%) 0%, hsl(0, 64%, 45%) 100% );
-    z-index: -1;
-    transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
-  }
-  
-  .card:hover::before {
-    height: 100%;
-  }
-  
-  .card:hover {
-    box-shadow: none;
-  }
+/* Estilo de contenedor para las tarjetas de presentación */
+.card {
+  position: relative;
+  display: inline-block;
+  /* Otros estilos... */
+  /* Agrega overflow: hidden; para ocultar el contenido que se desborda */
+  overflow: hidden;
+  /* Definir la escala inicial de las imágenes */
+  transform: scale(1);
+  transition: transform 0.3s; /* Transición suave para el efecto de escala */
+}
+
+/* Estilo de la imagen dentro del contenedor */
+.card .imagen {
+  /* Estilos de imagen... */
+}
+
+/* Agregar el efecto de escala al pasar el cursor sobre el contenedor */
+.card:hover {
+  transform: scale(1.3);
+}
+
   
   .card:hover .btn {
     color: #212121;
