--- a/pages/deportes/Baseball/tablapuntos/pustos_home.css
+++ b/pages/deportes/Baseball/tablapuntos/pustos_home.css
@@ -1,32 +1,46 @@
-.tablapuntos{
-    margin-top: 40px;
-    color: rgb(15, 15, 15);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Bebas Neue;
-}
-.tablapuntos table {
-    width: 80%; /* Cambia el porcentaje según el tamaño deseado */
-    border: 2px solid #000; /* Cambia el grosor y color de los bordes */
-    border-collapse: collapse; /* Para que los bordes colapsen y se vean más uniformes */
+/* Estilos generales */
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background: url('tu-imagen-de-fondo.jpg') no-repeat center center fixed;
+    background-size: cover;
 }
 
-.tablapuntos th, .tablapuntos td {
-    padding: 10px; /* Espacio interno entre el contenido y los bordes */
-    text-align: center; /* Centra el contenido en las celdas */
-    font-weight: bold; /* Cambia el grosor de la fuente */
-    color: #080808; /* Cambia el color del texto en las celdas */
+table {
+    border-collapse: collapse;
+    width: 50%;
+    margin: 0 auto;
+    background: transparent; /* Fondo transparente */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Sombra ligera */
 }
 
-.tablapuntos th {
-    background-color: #050505; /* Cambia el color de fondo del encabezado */
-    color: #fae9e9; /* Cambia el color del texto en el encabezado */
+table, th, td {
+    border: 1px solid black;
 }
 
-.tablapuntos tr:nth-child(odd) {
-    background-color: #f2f2f2; /* Cambia el color de fondo de filas impares */
+th, td {
+    padding: 8px;
+    text-align: center;
 }
-.tablapuntos tr:nth-child(even) {
-    background-color: #5aa2e6; /* Cambia el color de fondo de filas pares */
+
+th {
+    background-color: #f2f2f2;
+}
+
+/* Estilos específicos para cada tabla */
+.liga-nacional {
+    margin-bottom: 30px;
+}
+
+.liga-americana {
+    margin-top: 30px;
+}
+/* Ajuste del ancho de las columnas en la tabla de la Liga Americana */
+.liga-americana table {
+    width: auto; /* Ancho automático */
+}
+
+/* Ajuste del ancho de las columnas en la tabla de la Liga Nacional */
+.liga-nacional table {
+    width: auto; /* Ancho automático */
 }
