--- a/pages/deportes/Baseball/referencias/equipo.css
+++ b/pages/deportes/Baseball/referencias/equipo.css
@@ -1,9 +1,9 @@
 body {
-    color: #fffefe; /* Cambia #FF0000 por el color que desees en formato hexadecimal o de nombre */
+    color: #fdfbfb; /* Cambia #FF0000 por el color que desees en formato hexadecimal o de nombre */
     font-family: Arial, sans-serif;
     text-align: center;
-    margin: 20;
-    padding: 20;
+    margin: 20px;
+    padding: 20px;
 }
 
 h1 {
