--- a/pages/deportes/Baseball/home_baseball.css
+++ b/pages/deportes/Baseball/home_baseball.css
@@ -585,3 +585,8 @@
     align-items: center; /* Centrar verticalmente */
     height: 50vh; /* Altura del viewport */
 }
+
+.iframe{
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+}
