--- a/home/home.css
+++ b/home/home.css
@@ -1,4 +1,16 @@
-  
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+body {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+   font-family: 'Bebas Neue', sans-serif;
+}
+
+p{
+  color: #ffffff;
+  font-size: 30px;
+}
 /*estilos de los botones */
 .botonera{
   text-align: center; /* Centra horizontalmente los elementos dentro del contenedor */
@@ -256,4 +268,39 @@
   justify-content: center; /* Centrar horizontalmente */
   align-items: center; /* Centrar verticalmente */
   height: 50vh; /* Altura del viewport */
+}
+
+/* CARROUSEL*/
+
+.carousel-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.carousel {
+  text-align: center;
+}
+
+.carousel-inner {
+  display: flex;
+  overflow: hidden;
+}
+
+
+.carousel-inner div {
+  flex: 0 0 100%;
+  transition: transform 0.5s ease;
+}
+
+.carousel-inner div img {
+  width: 300px;
+  height: 550px;
+}
+
+h2 {
+  color: #ffffff;
+  font-size: 40px;
 }
