--- a/home/home.css
+++ b/home/home.css
@@ -12,6 +12,13 @@ p{
   font-size: 30px;
 }
 /*estilos de los botones */
+.idp{
+  position: absolute;
+  height: 10%;
+  width: 5%;
+  left: 5%;
+}
+
 .botonera{
   text-align: center; /* Centra horizontalmente los elementos dentro del contenedor */
   padding-top: 20px; /* Espacio superior para separar de la parte superior de la página */
@@ -68,9 +75,9 @@ p{
 /* centra el texto que cambia */
 .texto-cambiante{   
   position: absolute;
-  top: 450%;
-  width: 100%;
-  margin-top: 200px;
+  top: 250%;
+  width: 50%;
+  margin-left: 25%;
 }
 
 
@@ -78,10 +85,10 @@ p{
 
 .deportesnoticias{
   position: absolute;
-  top: 10%;
-  left: 10%;
+  top: 20%;
+  margin-left: 10%;
   height: 350px;
-  width: 200px;
+  width: 15%;
   margin-bottom: 30px;
 }
 
@@ -89,10 +96,10 @@ p{
 
 .fechas{
   position: absolute;
-  top: 10%;
-  left: 40%;
+  top: 20%;
+  margin-left: 40%;
   height: 350px;
-  width: 200px;
+  width: 15%;
   margin-bottom: 30px;
 }
 
@@ -117,9 +124,10 @@ p{
   margin: 10px;*/
 
   position: absolute;
-  top: 10%;
+  top: 20%;
   left: 60%;
   margin-bottom: 30px;
+  width: 40%;
 }
 
 
@@ -153,7 +161,7 @@ h2 {
 .nosotros{
   margin-top: 20px;
   position: absolute;
-  top: 90%;
+  top: 110%;
 }
 
 span{
