--- a/login/login.css
+++ b/login/login.css
@@ -21,6 +21,20 @@
     height: 150px;
     width: 150px;
 }
+
+.inicio{
+    position: absolute;
+    top: 45%;
+    left: 20%;
+    color: rgba(255, 255, 255, 0.849);
+}
+
+.etq{
+    border-radius: 2%;
+    background-color: rgba(0, 255, 255, 0.062);
+    color: aliceblue;
+}
+
 /*
 .content {
     background-color: rgb(0, 0, 0);
@@ -29,11 +43,9 @@
 }
 */
 .boton {
+    margin-top: 20px;
   background-color: black;
   font-size: 18px;
-  position: absolute;
-  top: 50%;
-  left: 80px;
   color: #3595c2; 
   border-radius: 15%;
 }
