--- a/home/home.css
+++ b/home/home.css
@@ -32,8 +32,8 @@ p{
   background-color: inherit;
   border-radius: 100px;
   font-weight: 600;
-  color: #ffffff40;
-  box-shadow: 0 0 0 2px #ffffff20;
+  color: #00b2f840;
+  box-shadow: 0 0 0 2px rgba(2, 207, 243, 0.507);
   cursor: pointer;
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
@@ -170,7 +170,7 @@ span{
 
 .nos{
   color: aliceblue;
-  background-color: rgba(255, 255, 0, 0.267);
+  background-color: rgba(0, 183, 255, 0.267);
   width: 50%;
   margin-left: 25%;
   margin-bottom: 50px;
