--- a/pages/administracion/administracion.css
+++ b/pages/administracion/administracion.css
@@ -1,14 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(22, 136, 156)
+
+body {
+    background-color: rgb(12, 80, 100);
 }
 
-.titulo{
+.div-titulo {
     width: 100%;
     height: 100px;
     display: flex;
@@ -16,22 +17,23 @@ body{
     align-items: center;
 }
 
-.titulo h1{
+.div-titulo h1 {
     font-weight: 300;
 }
 
-.abm{
+.contenedor {
     width: 100%;
-    height: calc(100hv - 100px);
+    height: calc(100vh - 100px);
     display: flex;
     justify-content: center;
 }
 
-.abm .formulario{
+/* ESTILOS FORMULARIO */
+.contenedor .div-formulario {
     width: 30%;
     height: 250px;
     margin: 15px 15px;
-    background-color: rgb(11, 255, 174);
+    background-color: rgb(135, 132, 132);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,15 +42,14 @@ body{
     box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
 }
 
-.abm .formulario h2{
+.contenedor .div-formulario h2 {
     margin-top: 10px;
     font-weight: 300;
     font-size: 2em;
-    color: rgb(0, 0, 0);
+    color: whitesmoke;
 }
 
-
-.abm .formulario form{
+.contenedor .div-formulario form {
     width: 100%;
     height: 100%;
     display: flex;
@@ -57,20 +58,19 @@ body{
     align-items: center;
 }
 
-.abm .formulario form input,
-.abm .formulario form button {
+.contenedor .div-formulario form input,
+.contenedor .div-formulario form button {
     width: 60%;
     padding: 10px 10px;
     margin: 10px 10px;
 }
 
-/*listado*/
-
-.abm .lista{
+/* ESTILOS LISTADO */
+.contenedor .div-listado {
     width: 55%;
     height: calc(100% - 50px);
     margin: 15px 15px;
-    background-color: rgb(16, 160, 160);
+    background-color: rgb(135, 132, 132);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,14 +78,14 @@ body{
     box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
 }
 
-.abm .lista h2{
+.contenedor .div-listado h2 {
     margin-top: 10px;
     font-weight: 300;
     font-size: 2em;
-    color: rgb(0, 0, 0);
+    color: whitesmoke;
 }
 
-.abm .lista .ususarios{
+.contenedor .div-listado .div-empleados {
     width: 100%;
     height: 100%;
     display: flex;
@@ -95,29 +95,29 @@ body{
     padding: 0 30px;
 }
 
-.abm .lista .ususarios p {
+.contenedor .div-listado .div-empleados p {
     margin: 10px 0;
     font-size: 1em;
-    color: bisque;
+    color: #ddd;
 }
 
-hr{
+hr {
     width: 100%;
     height: 1px;
 }
 
-.btn{
+.btn {
     padding: 5px 10px;
     border: none;
     margin: 0 5px;
-    color: aquamarine;
+    color: white;
     border-radius: 50px;
 }
 
-.btn-editar{
-    background-color: orange;
+.btn-editar {
+    background-color: green;
 }
 
-.btn-eliminar{
+.btn-eliminar {
     background-color: red;
 }
