--- a/login/login2.css
+++ b/login/login2.css
@@ -17,6 +17,22 @@ body {
     color: #ffffff;
 }
 
+.logo{
+    position: absolute;
+    top: 160px;
+    width: 4%;
+    height: 7%;
+    margin: 10px;
+}
+
+.logo2{
+    position: absolute;
+    top: 120px;
+    width: 4%;
+    height: 7%;
+    margin: 10px;
+}
+
 .video {
     position: fixed;
     right: 0;
