--- a/pages/deportes/BalonMano/Estadisticas/botones_mundial.css
+++ b/pages/deportes/BalonMano/Estadisticas/botones_mundial.css
@@ -1,17 +1,3 @@
-.container {
-padding-top: 10px;
-float: right;
-margin-right: 50px;
-  text-align: center;
-}
-.borde {
-  background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.844),rgba(128, 128, 128, 0.258));
-        border: 5px solid black;
-        padding: 10px;
-        margin-bottom: 10px;
-        justify-content: center;
-        margin-left: 200px;
-      }
 .botonera {
   text-align: center;
   padding-top: 40px;
@@ -28,6 +14,12 @@ margin-right: 50px;
 .Logo > img {
 width: 200px;
 height: 190px;
+}
+.jugador .banderas {
+  position: relative;
+  right: 190px;
+  height: 17px;
+  width: 25px;
 }
 .animated-button {
   margin-bottom: 40px;
@@ -87,11 +79,19 @@ height: 190px;
     height: 50vh;
   }
   .photos {
+    
     display: flex;
-    flex-direction: column;
-    align-items: center; 
+    flex-direction: column; /* Display the images vertically */
+    align-items: center; /* Center the images horizontally */
     margin-top: 20px;
     padding: 20px;
+  }
+  
+  .photos div {
+    flex-basis: 45%;
+    /*background-color: #f26c1c;*/
+    padding: 0px;
+    border-radius: 5px;
   }
   #fondo-transparente {
     position: flex;
@@ -99,19 +99,33 @@ height: 190px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../Estadisticas/Imagenes/fondo.png');
+    background-image: url('./Imagenes/fondo.png');
     opacity: 0.5;
     z-index: -1;
   }
-body {
+       body {
         font-family: Bebas Neue, sans-serif;
-    background-image: url(../Estadisticas/Imagenes/fondo.png);
+    background-image: url(./Imagenes/fondo.png);
     background-repeat: no-repeat;
     background-position: cover;
     background-size: cover;
     background-attachment: fixed;
   }
-h1 {
+  nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  } 
+  nav li {
+    display: inline-block;
+    margin: 0px;
+  }
+  h1 {
     color: white;
   text-shadow: 4px 4px 4px black;
 }
@@ -119,10 +133,51 @@ h2 {
   color: white;
   text-shadow: 4px 4px 4px black;
 }
-h3 {
-  color: white;
-text-shadow: 4px 4px 4px black;
+  .container {
+        text-align: center;
+      }
+  .container2 {
+    padding-top: 50px;
+        text-align: center;
+      }
+.container3 {
+    float: right;
+        text-align: center;
+      }
+.borde {
+    width: 1070px;
+        border: 5px solid black;
+        padding: 10px;
+        margin-bottom: 10px;
+        justify-content: center;
+        margin-left: 200px;
+      }
+.caja_estadisticas {
+  background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.844),rgba(128, 128, 128, 0.258));
+    width: 500px;
+    height: 480px;
+        border: 2.5px solid black;
+        padding: 10px;
+        margin-bottom: 10px;
+        display: grid;
+  place-items: center;
+      }
+ .jugador {
+  background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.844),rgba(128, 128, 128, 0.258));
+    width: 500px;
+    height: 480px;
+        border: 2.5px solid black;
+        padding: 10px;
+        margin-bottom: 10px;
+      }
+ .jugador img {
+    float: right;
+        width: 230px;
+        height: 230px;
+        object-fit: contain;
+        margin-left: 20px;
+        margin-bottom: 20px;
+      }
+.footer {
+  text-align:center;
 }
-  .footer {
-    text-align:center;
-    }
